# projectSV

./: Fornecedorlog.ipynb  README.md  conftest.py  pyproject.toml  requirements.txt  run_deploy.sh  script_update_function.sh  script_upload_s3.sh  script_zip_lambda.sh  start_poetry  test-result.xml
.github/workflows/: main.yaml
beerlog/: cli.py  serializers.py
docker/: Dockerfile  Dockerfile.aws.lambda
docs/: day1.md  day2.md  day3.md  day4.md  day5.md
fornecedorlog/: -- SQLite.sql  Recomendacao.py  api.py  cli.py  config.py  core.py  database.py  models.py  recommend.py  recommendation.py  serializers.py  settings.toml
fornecedorlog/static/: styles.css
fornecedorlog/templates/: fornecedors_list.html  header.html  index.html  page_selection.html  providers_list.html  replicar.py  result.html
kubernetes/: deployment.yaml  service.yaml
openfornecedordb_csv/: breweries.csv  categories.csv  styles.csv
templates/: Style.css  index.html  main.js
tests/: test_core.py  test_functional_api.py  test_functional_cli.py
