[tool.poetry]
name = "fornecedorlog"
version = "0.1.0"
description = ""
authors = ["SmartVout <smartvout@gmail.com>"]
include = ["fornecedorlog/settings.toml"]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.6"
fastapi = "^0.75.2"
typer = "^0.4.1"
rich = "^12.2.0"
dynaconf = "^3.1.8"
uvicorn = "^0.17.6"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
lxml = "^4.8.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
html5lib = "^1.1"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
black = {version = "^22.3.0", allow-prereleases = true}
pytest = "^7.1.2"
flake8 = "^4.0.1"
requests = "^2.27.1"

[tool.poetry.scripts]
fornecedorlog = "fornecedorlog.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
